--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">DIMIBOB</string>
+    <string name="dialog_title">안녕하세요!</string>
+    <string name="dialog_content">학교 생활에서 중요한 밥!을 알려주는 디미밥 위젯입니다.\n오류 신고는 hyemdooly@gmail.com으로 메일 부탁드립니다!"</string>
 </resources>
